<resources>
    <string name="app_name">Enhancements for GO</string>
    <!--Actions-->
    <string name="action_support_the_development">Support the development</string>
    <!--Dialog and messages-->
    <string name="requires_support">Supporters only</string>
    <string name="requires_support_desc">This feature is for supporters only, please consider making a small donation to unlock this feature and motivate me to work on the app :)</string>
    <string name="root_workaround">Non root workaround!</string>
    <string name="root_workaround_desc">If your device isn\'t rooted, you can manually grant the required permission by executing the following ADB command from your PC (the command is one line)  \'adb shell pm grant com.tomerrosenfeld.tweaksforgo android.permission.WRITE_SECURE_SETTINGS\'  Once you have done that, the app should work properly.</string>
    <string name="share_command">Share command</string>
    <string name="adb_command">adb shell pm grant com.tomerrosenfeld.tweaksforgo android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="share_command_title">Share the command to send it to your PC or a nerdy friend</string>
    <string name="how_to">ADB? How do I do that?</string>
    <string name="thank_you">Thank you for your donation :)</string>
    <!--Menu-->
    <string name="menu_change_team">Change team</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <!--Intro-->
    <string name="intro_choose_your_team">Choose your team</string>
    <string name="intro_skip">Skip</string>
    <!--Warnings-->
    <string name="warning_1_root">Your device must be rooted to use this feature</string>
    <!--Settings Category-->
    <string name="settings_battery_save">Battery saving</string>
    <string name="settings_enhancements">Enhancements</string>
    <string name="settings_other">Other</string>
    <string name="settings_general">General</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_about">About</string>
    <!--Settings Titles-->
    <string name="settings_overlay">Overlay screen</string>
    <string name="settings_dim">Dim screen</string>
    <string name="settings_proximity_sensor">Proximity sensor</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_battery_saver">Battery saver</string>
    <string name="settings_kill_background_processes">Kill background processes</string>
    <string name="settings_extreme_battery_saver">Extreme battery saver</string>
    <string name="settings_maximize_brightness">Maximize brightness</string>
    <string name="settings_persistent_notification">Persistent notification</string>
    <string name="settings_floating_menu">Floating menu</string>
    <string name="settings_translate">Translate</string>
    <!--Settings Descriptions-->
    <string name="settings_notifications_desc">Get notifications about new Pokemon around you. Click here to configure the notifications</string>
    <string name="settings_overlay_desc">Click the first option in the floating menu to show a black view over the screen to save battery and disable touches. Recommended for devices with AMOLED screens. Hide the overlay by double tapping the screen.</string>
    <string name="settings_dim_desc">Dim screen when overlay is active</string>
    <string name="settings_proximity_sensor_desc">Use the proximity sensor to detect if overlay will be shown</string>
    <string name="settings_keep_screen_on_desc">Keep the screen on while you are playing the game</string>
    <string name="settings_battery_saver_desc">Start battery saver automatically when the game starts (requires root)</string>
    <string name="settings_kill_background_processes_desc">Kill background processes when the game is launched to save battery and improve the apps performance (Recommended for devices with less than 2GB of ram)</string>
    <string name="settings_extreme_battery_saver_desc">Make the display monochrome and set the location mode to battery saving to reduce battery consumption. Very recommended for AMOLED devices.</string>
    <string name="settings_maximize_brightness_desc">Maximize the screen brightness when the game start for better outdoor visibility</string>
    <string name="settings_floating_menu_desc">Show a floating menu to toggle overlay and access handy links</string>
    <string name="settings_screen_off_proximity_desc">Turn off the display when you put the device in your pocket or cover the proximity sensor to save battery. (only for Android 5.0+)</string>
    <string name="settings_screen_off_proximity">Auto pocket mode</string>
    <string name="settings_floating_menu_position">Floating menu position</string>
    <string name="settings_floating_menu_position_desc">Choose where you want the floating menu to appear on the screen</string>
    <string name="settings_persistent_notification_desc">Show a persistent notification to keep the app running in background</string>
    <string name="settings_translate_desc">Help translating the app to your language</string>

    <string-array name="fab_position">
        <item>Top left</item>
        <item>Center left</item>
        <item>Center right</item>
    </string-array>
    <string-array name="fab_position_vals">
        <item>51</item>
        <item>19</item>
        <item>21</item>
    </string-array>
</resources>
